--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,9 @@
             "justMyCode": true,
             "args": [
                 "--name",
-                "disvae",
+                "pretext",
+                "--n_runs",
+                "2",
                 "--debug"
             ]
         },
