--- a/environment.yml
+++ b/environment.yml
@@ -267,4 +267,4 @@ dependencies:
     - pyyaml==6.0
     - wget==3.2
     - yapf==0.32.0
-prefix: /home/gergopool/miniconda3/envs/fact
+prefix: fact
